# pyrqlite

./: .coveragerc  .gitignore  ChangeLog.md  LICENSE  README.rst  pyproject.toml  setup.py
.circle/: config.yml
.circleci/: config.yml
src/pyrqlite/: _ephemeral.py  connections.py  constants.py  cursors.py  dbapi2.py  exceptions.py  extensions.py  row.py  sql.py  types.py
src/test/: test_dbapi.py  test_row.py  test_types.py
